Added montserrat fonts into the project

--- a/frontend/src/translations/de.json
+++ b/frontend/src/translations/de.json
@@ -32,5 +32,6 @@
   "Send a Feedback": "Eine Rückmeldung senden",
   "Company": "Unternehmen",
   "Report title": "Berichtstitel",
-  "You have an additional report for listing here? We gladly add it to our reporting list after a short inspection. Thanks for your cooperation.": "Sie haben einen zusätzlichen Bericht, den Sie hier auflisten möchten? Gerne nehmen wir ihn nach einer kurzen Prüfung in unsere Berichtsliste auf. Vielen Dank für Ihre Mitarbeit."
+  "You have an additional report for listing here? We gladly add it to our reporting list after a short inspection. Thanks for your cooperation.": "Sie haben einen zusätzlichen Bericht, den Sie hier auflisten möchten? Gerne nehmen wir ihn nach einer kurzen Prüfung in unsere Berichtsliste auf. Vielen Dank für Ihre Mitarbeit.",
+  "Business Responsibility Reports": "Berichte zur Unternehmensverantwortung"
 }
